samples/express/views/errors/unknown-block-tag.njk
{% if true %}
  <p>Test</p>
{% endif %}
{% endif %}
